--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
-        <link href="css/main.css" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
     </head>
     
     <body>
@@ -290,15 +290,32 @@
                         </div>
 
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0">
-                            <h6>Meet the Founder</h6>
+                            <h6>Ziad Rabea</h6>
 
-                            <h2 class="mb-4">About Ziad Rabea</h2>
+                            <h2 class="mb-4">Founder and CEO</h2>
 
                             <p>Ziad Rabea is the creator of Worldlang, the world's first multilingual, AI-powered programming language. With over a decade of experience, Ziad has developed groundbreaking projects, including AI models and advanced software, spanning various disciplines including (Desktop apps, Full-Stack Websites, Robotics and Embedded Systems and AI). Their work aims to make education and tech available to everyone.</p>
 
                             <p>As an innovator, Ziad is focused on teaching programming using Worldlang and is committed to helping businesses evolve and stay ahead in the rapidly advancing tech landscape, with a vision to transform industries such as education and healthcare. They also explore the intersection of AI and neuroscience.</p>
                         </div>
 
+                    </div>
+                    
+                </div>
+            </section>
+            <section class="featured-section" style="position: static; cursor:pointer" onclick="window.open('team.html')">
+                <div class="container">
+                    <div class="">
+
+                        <div class="col-lg-8 col-12" style="width: 100%;">
+                            <div class="avatar-group d-flex flex-wrap align-items-center" style="width:fit-content;margin:0 auto">
+                                <img src="images/team-member1.png" class="img-fluid avatar-image" alt="">
+
+                                <img src="images/team-member2.png" class="img-fluid avatar-image avatar-image-left" alt="">
+
+                                Meet the Team
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
