--- a/team.html
+++ b/team.html
@@ -57,7 +57,7 @@
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0">
                             <h6>Hassan Ahmed</h6>
 
-                            <h2 class="mb-4">Co-Founder and CGO</h2>
+                            <h2 class="mb-4">Co-Founder and CMO</h2>
 
                             <p>Hassan is a talented young innovator who showcased his ingenuity early on by creating a small robot named M.A.T.M (ماطم) while in high school. His passion for robotics and technology drives his pursuit of innovative solutions that blend creativity and functionality. Hassan’s work reflects his natural aptitude for engineering and problem-solving, even at a young age.</p>
                         </div>
