--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
                         <div class="col-lg-6 col-12 mb-5 pb-5 pb-lg-0 mb-lg-0">
 
-                            <h6>What is "OP Microservices"?</h6>
+                            <h6>The Backbone Behind Better Systems.</h6>
 
-                            <h3 class="text-white mb-4">As the name implies, Infinitfolio is a blend of "infinite" and "portfolio," signifying an endlessly powerful online presence for your business.</h1>
+                            <h3 class="text-white mb-4">Quietly building the foundation for a world that works better—for everyone.</h1>
 
                             <a href="#section_2" class="btn custom-btn smoothscroll me-3">Discover More</a>
 
@@ -144,9 +144,9 @@
                                 <h6>Where Vision Meets Reality</h6>
 
 
-                                <h2 class="mb-4">About infinitfolio</h2>
+                                <h2 class="mb-4">About OPMicroservices</h2>
 
-                                <p>At Infinitfolio, our vision is to empower small businesses with cutting-edge, affordable technology. We provide solutions ranging from simple online shops to advanced AI, automation, and robotics.</p>
+                                <p>At OP Microservices, our vision is to empower small businesses with cutting-edge, affordable technology. We provide solutions ranging from simple online shops to advanced AI, automation, and robotics.</p>
 
                                 <p>Our goal is to help businesses stand out, showcase their identity, and attract more customers while staying ahead of the competition.</p>
                             </div>
@@ -172,13 +172,13 @@
                                 <nav class="nav nav-pills flex-column">
                                     <a class="nav-link smoothscroll" href="#item-1">Introduction</a>
 
-                                    <a class="nav-link smoothscroll" href="#item-2">Service 1: <strong>Online Stores</strong></a>
+                                    <a class="nav-link smoothscroll" href="#item-2">Service 1: <strong>SchoolOS</strong></a>
 
-                                    <a class="nav-link smoothscroll" href="#item-3">Service 2: <strong>Personal Websites</strong></a>
+                                    <a class="nav-link smoothscroll" href="#item-3">Service 2: <strong>AlignOS</strong></a>
 
-                                    <a class="nav-link smoothscroll" href="#item-4">Service 3: <strong>Personal Blogs</strong></a>
+                                    <a class="nav-link smoothscroll" href="#item-4">Service 3: <strong>ResturantOS</strong></a>
 
-                                    <a class="nav-link smoothscroll" href="#item-5">Service 4: <strong>Custom Solution</strong></a>
+                                    <a class="nav-link smoothscroll" href="#item-5">Service 4: <strong>Custom Solutions</strong></a>
                                 </nav>
                             </nav>
                         </div>
@@ -186,79 +186,81 @@
                         <div class="col-lg-8 col-12">
                             <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
                                 <div class="scrollspy-example-item" id="item-1">
-                                    <h5>Why infinitfolio</h5>
+                                    <h5>Why Microservices</h5>
 
-                                    <p><strong>Affordable Innovation</strong> At Infinitfolio, we combine advanced technology with unbeatable affordability. Our mission is to empower small businesses by making cutting-edge solutions.</p>
+                                    <p><strong>Affordable Innovation</strong> At OP Microservices, we combine advanced technology with unbeatable affordability. Our mission is to empower small businesses by making cutting-edge solutions.</p>
 
                                     <p><strong>Tailored Solutions</strong> We understand that every business is unique. That’s why our services range from simple online shops to complex systems, designed to meet your specific needs.</p>
 
                                     <blockquote class="blockquote">The future belongs to those who embrace innovation and adapt to change.</blockquote>
 
-                                    <p>Infinitfolio offers affordable, cutting-edge tech solutions tailored to help small businesses thrive.</p>
+                                    <p>Microservices offers affordable, cutting-edge tech solutions tailored to help small businesses thrive.</p>
                                 </div>
 
                                 <div class="scrollspy-example-item" id="item-2">
-                                    <h5>Online Stores</h5>
+                                    <h5>SchoolOS</h5>
 
-                                    <p>Our online store service offers a fully dynamic platform to showcase your products and enhance your brand. Accessible anytime, anywhere, it provides a seamless shopping experience for your customers.</p>
+                                    <p>SchoolOS is a next-generation school management system designed to reduce costs, save time, and improve the quality of education through smart automation and modern design.</p>
 
-                                    <p>We also provide a custom Android app with your business name and logo, helping you look more professional and stand out from the competition.</p>
+                                    <p>It replaces outdated manual processes with efficient tools for attendance, grading, student records, scheduling, announcements, and more—freeing up staff to focus on what truly matters: students.</p>
 
-                                    <p>With 24/7 availability, your online store ensures customers can shop whenever they want, unlike physical stores with limited hours.</p>
+                                    <p>SchoolOS integrates cutting-edge technologies like computer vision for facial recognition-based authentication, and is built with an environmentally sustainable, low-resource structure—ready to run even on minimal hardware.</p>
 
                                     <div class="row">
                                         <div class="col-lg-6 col-12 mb-3">
-                                            <img src="images/Shop1.jpg" class="img-fluid" alt="">
+                                            <img src="images/tablet-screen-contents.jpg" class="img-fluid" alt="SchoolOS Dashboard">
                                         </div>
 
                                         <div class="col-lg-6 col-12 mb-3">
-                                            <img src="images/Shop2.jpg" class="img-fluid" alt="">
+                                            <img src="images/tablet-screen-contents.jpg" class="img-fluid" alt="Attendance View">
                                         </div>
                                     </div>
 
-                                    <p>Online shopping offers the comfort of browsing from home, making it easier for customers to order and increasing sales, helping your business grow and stay competitive.</p>
+                                    <p>With SchoolOS, institutions gain a faster, smarter way to operate—cutting costs, increasing accuracy, and delivering a seamless experience for administrators, teachers, and students alike.</p>
                                 </div>
 
                                 <div class="scrollspy-example-item" id="item-3">
-                                    <h5>Personal Portfolio Website</h5>
+                                    <h5>AlignOS</h5>
 
-                                    <p>As a fresh graduate, having a personal portfolio website is essential to showcase your skills, projects, and accomplishments in one place. It serves as a professional introduction, allowing potential employers or clients to view your work instantly.</p>
-                                    <p>A portfolio website helps you stand out from other candidates by displaying your unique abilities and strengths. It acts as a digital resume, providing a more interactive and engaging way for employers to assess your qualifications.</p>
+                                    <p>AlignOS is a purpose-driven social networking platform built to help you stay productive, focused, and professionally visible. Unlike traditional platforms, your profile on AlignOS is your actual resume—ready to share or get discovered by companies through smart search.</p>
+
+                                    <p>It features a built-in productivity environment with tools to manage your priorities, track your to-dos, and organize your ongoing learning. You can also explore top-tier educational resources from institutions like MIT, curated to help you grow with intention.</p>
+
+                                    <p>One of AlignOS’s signature features is the immersive countdown system—with visual and audio effects that let you *see* and *feel* the passage of time—designed to keep you accountable and mindful as you work or study.</p>
 
                                     <div class="row align-items-center">
                                         <div class="col-lg-6 col-12">
-                                            <img src="images/portfolio.jpg" class="img-fluid" alt="">
+                                            <img src="images/portfolio.jpg" class="img-fluid" alt="AlignOS Productivity Page">
                                         </div>
 
                                         <div class="col-lg-6 col-12">
-                                            <p>Take a step</p>
-
-                                            <p><strong>Create your portfolio today and take the first step towards building your professional future.</strong></p>
+                                            <p>Forget endless scrolling.</p>
+                                            <p><strong>Whether you're learning, building, or searching for your next opportunity—AlignOS keeps you aligned with what truly matters.</strong></p>
                                         </div>
                                     </div>
                                 </div>
+
 
                                 <div class="scrollspy-example-item" id="item-4">
-                                    <h5>Blog Service</h5>
+                                    <h5>RestaurantOS <small class="text-muted">(Under Development)</small></h5>
 
-                                    <p>Our blog service offers businesses and schools a personalized platform to communicate more professionally with their audience. You can easily post updates, news, and important information, ensuring your message reaches your customers.</p>
+                                    <p>RestaurantOS is a smart ordering system that replaces printed menus with a dynamic QR code menu—giving your customers instant access to your offerings with a single scan.</p>
 
-                                    <p>With a custom Android app featuring your business, school, or teacher’s name and logo, your audience can easily access your posts at any time. This enhances your brand’s visibility and keeps your followers engaged.</p>
+                                    <p>Menus can be updated in real-time without reprinting anything, saving both money and time. You can add, remove, or modify items instantly, ensuring your customers always see the latest version.</p>
 
-                                    <p>This service helps build a stronger connection with your customers or students by providing a direct, accessible channel for communication. It’s an efficient way to keep them informed and engaged.</p>
+                                    <p>With just a tap, customers can place their orders directly from their phones—streamlining the process, reducing staff workload, and enhancing the overall dining experience.</p>
 
-                                    <div class="row">
-                                        <div class="col-lg-6 col-12 mb-3">
-                                            <img src="images/blog1.jpg" class="img-fluid" alt="">
+                                    <div class="row align-items-center">
+                                        <div class="col-lg-6 col-12">
+                                            <p><strong>Cut printing costs. Reduce wait times. Serve smarter.</strong></p>
+                                            <p>RestaurantOS helps you modernize your service with a cleaner, faster, and more sustainable approach to dining.</p>
                                         </div>
-
-                                        <div class="col-lg-6 col-12 mb-3">
-                                            <img src="images/blog2.png" class="img-fluid" alt="">
+                                        <div class="col-lg-6 col-12">
+                                            <img src="https://assets-v2.lottiefiles.com/a/308268aa-117a-11ee-8eae-8b489916fde0/7RWeYFYbay.gif" class="img-fluid" alt="QR Menu Scan">
                                         </div>
                                     </div>
-
-                                    <p>Create your personalized blog today and start connecting with your audience more effectively.</p>
                                 </div>
+
 
                                 <div class="scrollspy-example-item" id="item-5">
                                     <h5>Personalized Services</h5>
