--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
-                        <img src="images/logo.png" height="75" width="75" style="display: inline-block;">
+                        <img src="https://www.opindustries.space/imgs/logo.jpg" height="75" width="75" style="display: inline-block;">
                         <span>OP Microservices</span>
                     </a>
     
@@ -48,9 +48,9 @@
                                 <a class="nav-link click-scroll" href="#section_2">About us</a>
                             </li>
 
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_3">Founder</a>
-                            </li>
+                            </li> -->
 
                             <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_4">Reviews</a>
@@ -61,12 +61,12 @@
                             </li>
                         </ul>
 
-                        <div class="d-none d-lg-block">
+                        <!-- <div class="d-none d-lg-block">
                             <a href="#" class="btn custom-btn custom-border-btn btn-naira btn-inverted">
                                 <i class="btn-icon bi-cloud-download"></i>
-                                <span>Download</span><!-- duplicated above one for mobile -->
+                                <span>Download</span>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </nav>
