--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     <body>
 
         <main>
-
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
-                        <img src="https://www.opindustries.space/imgs/logo.jpg" height="75" width="75" style="display: inline-block;">
+                        <img style="border-radius: 50%; border:5px solid #fff" src="https://www.opindustries.space/imgs/logo.jpg" height="75" width="75" style="display: inline-block;">
                         <span>OP Microservices</span>
                     </a>
     
@@ -48,9 +47,9 @@
                                 <a class="nav-link click-scroll" href="#section_2">About us</a>
                             </li>
 
-                            <!-- <li class="nav-item">
+                            <li class="nav-item" style="display: none;">
                                 <a class="nav-link click-scroll" href="#section_3">Founder</a>
-                            </li> -->
+                            </li>
 
                             <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_4">Reviews</a>
