--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
 
                         <div class="hero-image-wrap col-lg-6 col-12 mt-3 mt-lg-0">
-                            <img src="images/education-online-books.png" class="hero-image img-fluid" alt="infinitfolio">
+                            <img src="images/phone.png" class="hero-image img-fluid" alt="infinitfolio">
                         </div>
 
                     </div>
